--- a/base/templates/base/created_rooms.html
+++ b/base/templates/base/created_rooms.html
@@ -41,44 +41,35 @@
           <div class="row">
             <!-- Reports -->
             <div class="col-12">
-              <!-- Top Selling -->
-            <div class="col-12">
-              <div class="card top-selling overflow-auto">
+              <div class="col-12">
+              <div class="card recent-sales overflow-auto">
 
-                <div class="card-body pb-0">
-                  <h5 class="card-title">Rooms <span>| created</span></h5>
-
-                  <table class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th scope="col">Room name</th>
-                        <th scope="col">Members</th>
-                        <th scope="col">Last Active</th>
-                        <th scope="col">Edit</th>
-                        <th scope="col">Delete</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {% if empty_rooms %}
-                      <h4>No available room</h4>
-                      {% else %}
-                      {% for room in rooms %}
-                      <tr>
-                        <td><a href="{% url 'room' room.id %}" class="text-primary fw-bold">{{room.name}}</a></td>
-                        <td>{{room.members.all|length}}</td>
-                        <td class="fw-bold">{{room.last_active}}</td>
-                        <td><a class="btn btn-info btn-sm" href="">Edit</a></td>
-                        <td><a class="btn btn-danger btn-sm" href="{% url 'delete-room' room.id %}">Delete</a></td>
-                      </tr>
-                      {% endfor %}
-                      {% endif %}
-                    </tbody>
-                  </table>
-
+                <div class="card-body">
+                  <h5 class="card-title">Chat rooms <span>| All rooms</span></h5>
+                  <div class="row">
+                    {% for room in rooms %}
+                    <div class="col col-12 col-sm-6 col-md-4">
+                      <div class="card">
+                        <img src="{{room.class_img.url}}" class="card-img-top" style="max-height:180px; object-fit:cover;" alt="...">
+                        <div class="card-body">
+                          <a href="{% url 'room' room.id %}"><h5 class="card-title">{{room.name}}</h5></a>
+                          <p class="card-text">{{room.description|truncatewords:6}}</p>
+                          <img src="{{room.host.profile.profile_pic.url}}" class="card-img-top rounded-circle" style="width:30px; height:30px" alt="...">
+                          <span>creator: <a href="{% url 'profile' room.host.id %}">@{{room.host.username}}</a></span>
+                          <div class="my-2">
+                              <a href="{% url 'room' room.id %}" class="text-primary">View room</a>
+                          </div>
+                          <a href="{% url 'edit-room' room.id %}" class="btn btn-info me-1 btn-sm">Edit</a>
+                          <a href="{% url 'delete-room' room.id %}" class="btn btn-danger btn-sm">Delete</a>
+                        </div>
+                      </div><!-- End Card with an image on top -->
+                    </div>
+                    {% endfor %}
+                  </div>
                 </div>
 
               </div>
-            </div><!-- End Top Selling -->
+            </div>
               
             </div><!-- End Reports -->
           </div>
