--- a/base/templates/base/rooms.html
+++ b/base/templates/base/rooms.html
@@ -8,6 +8,7 @@
 <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
 
 <style>
     /* Custom CSS */
@@ -43,12 +44,12 @@
           {% if user in room.members.all %}
             <div class="row">
                 <div class="col-md-10">
-                    <div class="alert alert-success" role="alert">
+                    <div class="alert alert-dark" role="alert">
                       You are a member of this group
                     </div>
                 </div>
-                <div class="col-md-2 mt-1 mb-2">
-                    <a href="{% url "exit-room" room.id %}" class="btn btn-danger">Exit</a>
+                <div class="col-md-2 mt-2 mb-2">
+                    <a href="{% url "exit-room" room.id %}">Exit</a>
                 </div>
             </div>
         {% else %}
@@ -59,14 +60,14 @@
             <!-- Reports -->
             <div class="col-12">
               <div class="card pt-2">
-                <div class="chat-container card-body" style="max-height: 480px; overflow-y: auto;">
+                <div class="chat-container card-body" style="max-height: 420px; overflow-y: auto;">
                   <h5 class="card-title">Chats <span>/new messages on top</span></h5>
-                  {% for message in room.get_messages %}    
+                  {% for message in room.get_messages %}
                     <div class="container">
                         <div class="col-md-6 {% if message.user == request.user  %}ms-auto text-end alert alert-success{% else %} alert alert-dark{% endif %} ">
                             <div class="media">
                                 <img src="{{message.user.profile.profile_pic.url}}" style="width:25px; height:23px;" class="me- rounded-circle" alt="Profile Picture">
-                                <a href="{% url 'profile' message.user.id %}"><span class="mt-0">@{{message.user}}</span></a> | 
+                                <a href="{% url 'profile' message.user.id %}"><span class="mt-0">@{{message.user}}</span></a> |
                                 <small>{{message.created|timesince}} ago</small>
                                 <div class="media-body">
                                     <p>{{message.body}}</p>
@@ -87,7 +88,7 @@
                         </span>
                     </div>
                     </div>
-                                        
+
                   </form>
                 </div>
 
@@ -112,14 +113,14 @@
                         {{user.profile.full_name}}
                     {% else %}
                         {{user}}
-                    {% endif %} 
+                    {% endif %}
                   </a></h4>
                   <p>
                     {% if user.profile.bio %}
                         {{user.profile.bio|truncatewords:5}}
                     {% else %}
                         No bio
-                    {% endif %} 
+                    {% endif %}
                   </p>
                   <br>
                 </div>
