--- a/templates/main.html
+++ b/templates/main.html
@@ -6,10 +6,11 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>DevsHub | {% block title %}{% endblock title %}</title>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
   {% block css_files %}{% endblock css_files %}
 </head>
 
