--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,9 @@
+  {% load static %}
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="{% url 'home' %}" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
+        <img src="{% static 'img/logo.png' %}" alt=logo"">
         <span class="d-none d-lg-block">DevsHub</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -34,7 +35,7 @@
                 {{request.user.profile.full_name}}
               {% else %}
                 {{request.user}}
-               {% endif %} 
+               {% endif %}
             </span>
           </a><!-- End Profile Iamge Icon -->
 
